--- a/angular.json
+++ b/angular.json
@@ -25,12 +25,12 @@
               "src/assets"
             ],
             "styles": [
-              
-                "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
-                "./node_modules/bootstrap/dist/css/bootstrap.min.css",
-                "./node_modules/font-awesome/css/font-awesome.min.css",
-                "src/styles.css"
-              ],
+              "@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/font-awesome/css/font-awesome.min.css",
+              "src/styles.css"
+            ],
               "scripts": []
           },
           "configurations": {
@@ -91,6 +91,7 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.css"
             ],
             "scripts": []
